# building-pharma-decision-systems

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
ch01_intro/: index.html
ch01_intro/ch01_introduction/: index.html
ch02_ecosystem/: index.html
ch02_ecosystem/ch02_appendix/: index.html
ch02_ecosystem/ch02_ecosystem/: index.html
ch03_data/: chapter3_walkthrough.ipynb  exercise_solutions.ipynb  index.html
ch03_data/ch03_appendix/: index.html
ch03_data/ch03_data/: index.html
ch03_data/ch03_exercise_solutions/: index.html
ch03_data/ch03_walkthrough/: index.html
ch03_data/chapter3_walkthrough/: index.html
ch03_data/exercise_solutions/: index.html
ch03_data/generation_modules/: __init__.py  claims.py  entities.py  scenario.py  (+3 more)
ch04_market/: ch04_exercise_solutions.ipynb  ch04_walkthrough.ipynb  chapter4_walkthrough.ipynb  exercise_solutions.ipynb  index.html
ch05_journey/: chapter5_walkthrough.ipynb  exercise_solutions.ipynb  index.html
ch06_hcp/: ch06_exercise_solutions.ipynb  chapter6_walkthrough.ipynb  exercise_solutions.ipynb  index.html
ch07_competitive/: chapter7_walkthrough.ipynb  exercise_solutions.ipynb  index.html
ch08_omnichannel/: ch08_exercise_solutions.ipynb  ch08_walkthrough.ipynb  chapter8_walkthrough.ipynb  exercise_solutions.ipynb  index.html
ch09_nba/: ch09_exercise_solutions.ipynb  ch09_walkthrough.ipynb  chapter9_walkthrough.ipynb  exercise_solutions.ipynb
chapter-1/: index.html
chapter-2/: index.html
docs/: index.md
search/: search_index.json
(+245 files in other folders)
